fix gap

--- a/src/Components/CalculationSection/CalculateSection.css
+++ b/src/Components/CalculationSection/CalculateSection.css
@@ -64,7 +64,10 @@
 
   .calculate-name-container {
     flex-direction: column;
-    gap: 2rem;
+    gap: 10px;
+    
+
+
   }
   .calculate-bubble  {
     margin-top: -7%;
